--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html ng-app="bloodrageBattleTimer">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <base href="/">
         <title>DoBeDo</title>
         
         <!--angular.js-->
@@ -19,6 +20,7 @@
         <script src="core/core.api.js"></script>
         <!--Router-->
         <script src="view-index-main/index-main.module.js"></script>
+        <script src="view-about-main/about-main.module.js"></script>
 
         <!--CSS -->
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
