--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <base href="/">
-        <title>DoBeDo</title>
+        <title>BLOODRAGE BATTLE TIMER</title>
         
         <!--angular.js-->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
