--- a/public/view-index-main/index-main.template.html
+++ b/public/view-index-main/index-main.template.html
@@ -1,4 +1,61 @@
-<h1>Welcome!</h1>
+<header>
+    <h1>Blood Rage Battle Timer</h1>
+</header>
+
+<div class="index-username">
+    <h2>[ USER NAME ]</h2>
+</div>
+
+<div class="row">
+    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
+        <div class="index-list-box">
+            <h3>Get Your Blood</h3>
+            <img ng-src="http://placehold.it/48x48">
+            <p>Blood-rage</p>
+            <p>3Player Joined.</p>
+        </div>
+    </div>
+    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
+        <div class="index-list-box">
+            <h3>Get Your Blood</h3>
+            <img ng-src="http://placehold.it/48x48">
+            <p>Blood-rage</p>
+            <p>3Player Joined.</p>
+        </div>
+    </div>
+    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
+        <div class="index-list-box">
+            <h3>Get Your Blood</h3>
+            <img ng-src="http://placehold.it/48x48">
+            <p>Blood-rage</p>
+            <p>3Player Joined.</p>
+        </div>
+    </div>
+    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
+        <div class="index-list-box">
+            <h3>Get Your Blood</h3>
+            <img ng-src="http://placehold.it/48x48">
+            <p>Blood-rage</p>
+            <p>3Player Joined.</p>
+        </div>
+    </div>
+    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
+        <div class="index-list-box">
+            <h3>Get Your Blood</h3>
+            <img ng-src="http://placehold.it/48x48">
+            <p>Blood-rage</p>
+            <p>3Player Joined.</p>
+        </div>
+    </div>
+    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
+        <div class="index-list-box">
+            <h3>Get Your Blood</h3>
+            <img ng-src="http://placehold.it/48x48">
+            <p>Blood-rage</p>
+            <p>3Player Joined.</p>
+        </div>
+    </div>
+</div>
 
 <a href="/about"><h2>About Service.</h2></a>
 
