--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-socket-io/socket.min.js"></script>
         <script src="app.module.js"></script>
         <script src="app.config.js"></script>
