Makeroom frontend  코드 작성

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
         <!--Router-->
         <script src="view-index-main/index-main.module.js"></script>
         <script src="view-about-main/about-main.module.js"></script>
+        <!--Modals-->
+        <script src="modal-makeroom/modal-makeroom.module.js"></script>
         
         <!--CSS -->
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
