--- a/public/modal-makeroom/modal-makeroom.template.html
+++ b/public/modal-makeroom/modal-makeroom.template.html
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
             <label for="inputRoomGame">Game</label>
-            <select class="form-control">
+            <select class="form-control" ng-model="$ctrl.game_type">
                 <option>Blood Rage</option>
             </select>
         </div>
