--- a/public/view-room-game/room-game.template.html
+++ b/public/view-room-game/room-game.template.html
@@ -11,17 +11,15 @@
 
 <div class="index-functions">
     <button class="btn btn-block btn-primary" type="button" ng-click="$ctrl.makeroomClicked()"> Make Room </button>
-    <button class="btn btn-block btn-primary" type="button" ng-click="$ctrl.refreshClicked()"> Refresh </button>
 </div>
 
 <div class="row">
-    <div class="col col-lg-4 col-md-4 col-sm-6 index-list" ng-repeat="roomdata in $ctrl.roomdata">
+    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
         <div class="index-list-box">
-            <h3>{{roomdata.title}}</h3>
+            <h3>Get Your Blood</h3>
             <img ng-src="http://placehold.it/48x48">
-            <p>{{roomdata.gametype}}</p>
-            <p>{{roomdata.player}}</p>
-            <p>{{roomdata.username}}</p>
+            <p>Blood-rage</p>
+            <p>3Player Joined.</p>
         </div>
     </div>
 </div>
