--- a/public/view-index-main/index-main.template.html
+++ b/public/view-index-main/index-main.template.html
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col col-lg-4 col-md-4 col-sm-6 index-list" ng-repeat="roomdata in $ctrl.roomdata">
         <div class="index-list-box">
-            <h3>{{roomdata.title}}</h3>
+            <h3><a ng-click="$ctrl.joinroomClicked(roomdata.roomid)">{{roomdata.title}}</a></h3>
             <img ng-src="http://placehold.it/48x48">
             <p>{{roomdata.gametype}}</p>
             <p>{{roomdata.player}}</p>
