게임룸 클라이언트 코드 제작 시작

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
         <script src="view-index-main/index-main.module.js"></script>
         <script src="view-about-main/about-main.module.js"></script>
         <script src="view-room-main/room-main.module.js"></script>
+        <script src="view-room-game/room-game.module.js"></script>
         <!--Modals-->
         <script src="modal-makeroom/modal-makeroom.module.js"></script>
         
