--- a/public/view-room-game/room-game.template.html
+++ b/public/view-room-game/room-game.template.html
@@ -1,28 +1,11 @@
-<header>
-    <h1>Blood Rage Battle Timer</h1>
-</header>
-
-<div class="index-username">
-    <form role="form">
-        <h2>[ <input type="text" class="form-control index-username-input" ng-model="$ctrl.username" ng-blur="$ctrl.changeName()" ng-keyup="doBlur($event)"> ]</h2>
-    </form>
-    
+<div class="game-player">
+    <h1>Player1 : 프릴류드 님의 순서입니다.</h1>
 </div>
 
-<div class="index-functions">
-    <button class="btn btn-block btn-primary" type="button" ng-click="$ctrl.makeroomClicked()"> Make Room </button>
-</div>
-
-<div class="row">
-    <div class="col col-lg-4 col-md-4 col-sm-6 index-list">
-        <div class="index-list-box">
-            <h3>Get Your Blood</h3>
-            <img ng-src="http://placehold.it/48x48">
-            <p>Blood-rage</p>
-            <p>3Player Joined.</p>
-        </div>
+<div class="game-wrapper">
+    <div class="game-circle"></div>
+    <div class="game-circle-stop"></div>
+    <div class="game-time">
+        <span>154</span>
     </div>
 </div>
-
-<a href="/about"><h2>About Service.</h2></a>
-
